# SPDK-DISKPAXOS

./: CMakeLists.txt  Makefile  README.md  build.sh  installDeps.sh
include/: BankCommand.hpp  Command.hpp  DiskAccess.hpp  DiskBlock.hpp
include/Disk/: DiskAccess.hpp  DiskBlock.hpp  DiskPaxos.hpp  SPDK_ENV.hpp  SglOpts.hpp
include/Processes/: Leader.hpp  MultiReplica.hpp  Replica.hpp
include/Test/: disk_isomorphic_test.hpp
protobuf/: class.proto  message.proto
src/: BankCommand.cpp  Command.cpp  DiskAccess.cpp  DiskBlock.cpp  Replica.cpp  Server.cpp  disk_isomorphic_test.cpp  main.cpp
src/Disk/: DiskAccess.cpp  DiskBlock.cpp  DiskPaxos.cpp  SPDK_ENV.cpp  SglOpts.cpp
src/Executables/: benchleader.cpp  local_thread_test.cpp  reset.cpp  single_process.cpp
src/MainProcesses/: Client.cpp  Server.cpp
src/Processes/: Leader.cpp  MultiReplica.cpp  Replica.cpp
src/Scripts/: auto_config_nvmf_tgt.sh  config_nvmf_tgt.txt  gen_files.py  installDeps.sh  nvmf_config_tcp.json  process_test.sh  process_test_local.sh  reset.cpp  setup_nvmf_tgt.sh  simple_test.sh
src/Scripts/Remote/: benchmark.sh  disksconfig.json  disksconfigV2.json  setup_network.sh  single_nvmf_tgt_setup.sh  test_configuration.json
src/Test/: disk_isomorphic_test.cpp  setup_nvmf_tgt.sh  simple_test.sh
